# QtDesignStudio

./: .gitignore  .gitmodules  .qmake.conf  CMakeLists.txt  README  README.md  init-repository.sh  qtcreator-super.pro  qtcreator-super.qbs
coin/: products.json
designstudio/: CMakeLists.txt  README
designstudio/studiodata/: CMakeLists.txt
designstudio/studiodata/branding/: QtCreatorIDEBranding.cmake
designstudio/studiodata/qmldesigner/QtProject/: QtDesignStudio.ini
designstudio/welcomepage/: CMakeLists.txt
designstudio/welcomepage/qmldesigner/welcomepage/: BrandBar.qml  CustomDialog.qml  CustomDialogButtonBox.qml  CustomGrid.qml  CustomGrid.ui.qml  CustomScrollBar.qml  CustomScrollView.qml  DialogButton.qml  DownloadButton.qml  DownloadPanel.qml  DownloadProgressBar.qml  ExpandToggle.ui.qml  FavoriteToggle.qml  MainGridStack.qml  MainScreen.qml  ProgressBar.qml  PushButton.ui.qml  StringMapper.qml  Tag.qml  TagArea.qml  ThumbnailDelegate.qml  TwirlButton.qml  TwitterButton.qml  WelcomePage.qml  WelcomeScreen.qmlproject  WelcomeScreen.qmlproject.qtds  YoutubeButton.qml  main.qml  main.qml.autosave  main.qml.qml
designstudio/welcomepage/qmldesigner/welcomepage/dataImports/DataModels/: BlogBanner.qml  ExamplesModel.qml  TutorialsModel.qml  qmldir
designstudio/welcomepage/qmldesigner/welcomepage/imports/WelcomeScreen/: Constants.qml
designstudio/welcomepage/qmldesigner/welcomepage/mockData/ExampleCheckout/: FileDownloader.qml  FileExtractor.qml
designstudio/welcomepage/qmldesigner/welcomepage/mockData/projectmodel/: ProjectModel.qml
designstudio/welcomepage/qmldesigner/welcomepage/studioImports/HelperWidgets/: ExtendedFunctionLogic.qml  qmldir
designstudio/welcomepage/qmldesigner/welcomepage/studioImports/StudioControls/: ButtonRow.qml  CheckIndicator.qml  ComboBox.qml  ComboBoxInput.qml  ControlLabel.qml  EditableListView.qml  Label.qml  LinkIndicator2D.qml  LinkIndicator3D.qml  LinkIndicator3DComponent.qml  Menu.qml  OriginButton.qml  OriginIndicator.qml  OriginSelector.qml  PropertyLabel.qml  ScrollBar.qml  TabBar.qml  TabButton.qml  TextAreaScrollView.qml  qmldir
designstudio/welcomepage/qmldesigner/welcomepage/studioImports/StudioTheme/: InternalConstants.qml  Values.qml  Values_dark.qml  Values_light.qml
exampleplugin/: CMakeLists.txt  ExamplePlugin.json.in  exampleplugin.cpp  exampleplugin.h  exampleplugin_global.h  examplepluginview.cpp  examplepluginview.h  examplepluginviewwidget.cpp  examplepluginviewwidget.h
qbs_resources/imports/: QtcCommercialPlugin.qbs
scripts/: checkout_release_shas.py  contributorlist.sh  impl_publish_qtcreator.py  publish_qtcreator.py  publish_qtcreator.sh
